firefox: Attempt to fix urlbar misalignment

--- a/firefox/userChrome.css
+++ b/firefox/userChrome.css
@@ -3,7 +3,16 @@
 
 /* Fix urlbar alignment */
 #urlbar[breakout][breakout-extend] {
-	bottom: 5px !important;
+	bottom: 4px !important;
+}
+
+#urlbar-input-container {
+	padding-inline: 0 !important;
+	padding-block: 0 !important;
+}
+
+#urlbar-background {
+	border: none !important;
 }
 
 /* No tabs */
